Fix bugs panneau admin diet + submit diet + css scrollbar + diet review

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -92,3 +92,16 @@ button, select, html, textarea, input{
    border-left:5px solid #811DA7;
    margin:20px 0 0 0;
 }
+
+body::-webkit-scrollbar {
+    width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
